Publicando meu código do Google colab

--- a/analise_de_vendas.ipynb
+++ b/analise_de_vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC531t7HW8Akuv2Jn7/7qF",
+      "authorship_tag": "ABX9TyNMBAFfk91uYZ6/V8lTvaFg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1060,7 +1060,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Passo 6 - Calcular a loja/cidade que mais vendeu (em faturamento) - criar um gráfico/dashboard\n",
+        "# Passo 6 - Calcular a loja/cidade que mais vendeu (em faturamento)\n",
         "tabela_lojas =tabela_total.groupby(\"Loja\").sum()\n",
         "tabela_lojas = tabela_lojas[['Faturamento']]\n",
         "display(tabela_lojas)"
@@ -1245,6 +1245,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Criar um gráfico/dashboard\n",
+        "\n",
         "import plotly.express as px\n",
         "\n",
         "grafico = px.bar(tabela_lojas, x=tabela_lojas.index , y='Faturamento')\n",
